--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,2 @@
-<h1>{{ title }}</h1>
-<div class="container">
-  <a routerLink="/books">Books</a>
-  <a routerLink="/authors">Authors</a>
-</div>
+<app-sidenav></app-sidenav>
 <router-outlet></router-outlet>
