--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
+
 * {
   margin: 0;
   padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-h1 {
-  text-align: center;
-  color: #8A2BE2	;
-}
