--- a/src/app/layout/sidenav/sidenav.component.html
+++ b/src/app/layout/sidenav/sidenav.component.html
@@ -8,5 +8,6 @@
   </mat-sidenav>
   <mat-sidenav-content>
     <router-outlet></router-outlet>
+    <app-toaster></app-toaster>
   </mat-sidenav-content>
 </mat-sidenav-container>
