--- a/src/app/authors/components/author-detail/author-detail.component.html
+++ b/src/app/authors/components/author-detail/author-detail.component.html
@@ -5,5 +5,8 @@
   </div>
     <hr>
 
-  <button class="change-author" routerLink="/authors/{{ id }}/edit">Change author's information</button>
+  <div class="control-button">
+    <button class="change-author" routerLink="/authors/{{ id }}/edit">Change author's information</button>
+    <button class="add-new-book" routerLink="/authors/{{ id }}/new_book">Add new book to author</button>
+  </div>
 </div>
