--- a/src/app/authors/components/author-detail/author-detail.component.html
+++ b/src/app/authors/components/author-detail/author-detail.component.html
@@ -6,7 +6,7 @@
     <hr>
 
   <div class="control-button">
-    <button class="change-author" routerLink="/authors/{{ id }}/edit">Change author's information</button>
-    <button class="add-new-book" routerLink="/authors/{{ id }}/new_book">Add new book to author</button>
+    <button mat-stroked-button color="primary" class="change-author" routerLink="/authors/{{ id }}/edit">Change author's information</button>
+    <button mat-stroked-button color="primary" class="add-new-book" routerLink="/authors/{{ id }}/new_book">Add new book to author</button>
   </div>
 </div>
