--- a/src/app/books/components/books-list/books-list.component.html
+++ b/src/app/books/components/books-list/books-list.component.html
@@ -1,4 +1,4 @@
-<app-search debounce="1000" (searchValue)="filterBooks(1, $event)"></app-search>
+<app-search [debounce]="1000" (searchValue)="filterBooks(1, $event)"></app-search>
 
 <div class="container">
 
