--- a/src/libs/search/components/search/search.component.html
+++ b/src/libs/search/components/search/search.component.html
@@ -1,6 +1,4 @@
 <mat-form-field>
   <mat-label>Search</mat-label>
-  <input matInput #search name="search" id="search"
-         [ngModel]="searchSign" (ngModelChange)="searchResult($event)"
-  >
+  <input matInput #search name="search" id="search">
 </mat-form-field>
