--- a/src/app/books/components/book-detail/book-detail.component.css
+++ b/src/app/books/components/book-detail/book-detail.component.css
@@ -18,20 +18,14 @@ p {
 
 button {
   padding: 5px;
-  margin: 0 auto;
-  border: 1px solid #666;
-  border-radius: 5px;
-  outline: none;
+  margin: 10px auto;
 }
 
 button:hover {
-  border: 1px #303030 solid;
-  background-color: #fae884;
+  background-color: rgba(132, 111, 148, 0.6);
 }
 
 button:active {
-  border: 1px #666 solid;
   background-color: white;
   opacity: 0.5;
 }
-
