--- a/src/app/layout/sidenav/sidenav.component.html
+++ b/src/app/layout/sidenav/sidenav.component.html
@@ -2,7 +2,7 @@
   <mat-sidenav mode="side" opened class="side-nav-bar">
     <h1>Books List</h1>
     <mat-nav-list>
-      <a mat-list-item routerLink="books" routerLinkActive="active">Books</a>
+      <a mat-list-item routerLink="books" [queryParams]="{page: 1}" routerLinkActive="active">Books</a>
       <a mat-list-item routerLink="authors" routerLinkActive="active">Authors</a>
     </mat-nav-list>
   </mat-sidenav>
