--- a/src/app/books/components/books-list/books-list.component.html
+++ b/src/app/books/components/books-list/books-list.component.html
@@ -2,6 +2,8 @@
 
 <div class="container">
 
+  <p *ngIf="messageError" class="resultMessage">{{ messageError }}</p>
+
   <div *ngFor="let book of books">
     <img class="book-promo" src="../assets/images/book.jpg" alt="book-promo">
     <div  class="book-description">
