--- a/src/app/shared/components/book-form/book-form.component.html
+++ b/src/app/shared/components/book-form/book-form.component.html
@@ -2,16 +2,16 @@
   <mat-form-field>
     <mat-label>Enter book's title:</mat-label>
     <input matInput id="title" name="title" type="text" formControlName="title">
-  </mat-form-field>
-  <span *ngIf="title.touched && title.invalid && title.errors.required">
+    <mat-error *ngIf="title.touched && title.invalid && title.errors.required">
       Book's title is required.
-    </span>
+    </mat-error>
+  </mat-form-field>
   <mat-form-field>
     <mat-label>Enter book's description:</mat-label>
-      <textarea matInput id="description" name="description" type="text" formControlName="description"></textarea>
-  </mat-form-field>
-  <span *ngIf="description.touched && description.invalid && description.errors.required">
+    <textarea matInput id="description" name="description" type="text" formControlName="description"></textarea>
+    <mat-error *ngIf="description.touched && description.invalid && description.errors.required">
       Book's description is required.
-    </span>
+    </mat-error>
+  </mat-form-field>
   <button mat-stroked-button color="primary" type="submit" [disabled]="bookForm.invalid" class="submitButton">Submit book's info</button>
 </form>
