--- a/src/app/shared/components/author-form-template/author-form-template.component.html
+++ b/src/app/shared/components/author-form-template/author-form-template.component.html
@@ -1,4 +1,4 @@
-<form #authorFormTemplate="ngForm" (ngSubmit)="onSubmitTemplate(authorFormTemplate)" *ngIf="authorTemplate">
+<form #authorFormTemplate="ngForm" (ngSubmit)="onSubmitTemplate(authorFormTemplate)">
 
   <!-- FIRST NAME -->
   <mat-form-field>
